style/index.css
:root
{
	--theme: 0;
	--contrast: 0;

	--background: color-mix(in srgb, rgb(255, 255, 255), rgb(24, 24, 24) calc(var(--theme) * 100%));

	--high-contrast: color-mix(in srgb, rgb(0, 0, 0), rgb(255, 255, 255) calc(var(--theme) * 100%));

	--normal-contrast-partial: color-mix(in srgb, rgb(32, 32, 32), rgb(224, 224, 224) calc(var(--theme) * 100%));
	--low-contrast-partial: color-mix(in srgb, rgb(96, 96, 96), rgb(184, 184, 184) calc(var(--theme) * 100%));

	--normal-contrast: color-mix(in srgb, var(--normal-contrast-partial), var(--high-contrast) calc(var(--contrast) * 100%));
	--low-contrast: color-mix(in srgb, var(--low-contrast-partial), var(--high-contrast) calc(var(--contrast) * 100%));

	--neutral-hover: color-mix(in srgb, rgb(208, 208, 208), rgb(64, 64, 64) calc(var(--theme) * 100%));

	--link-normal-contrast: color-mix(in srgb, rgb(0% 60.09% 3.61%), rgb(160, 224, 160) calc(var(--theme) * 100%));
	--link-hover-normal-contrast: color-mix(in srgb, rgb(71, 220, 84), rgb(147, 255, 147) calc(var(--theme) * 100%));

	--link-high-contrast: color-mix(in srgb, rgb(0, 192, 0), rgb(127, 255, 127) calc(var(--theme) * 100%));
	--link-hover-high-contrast: color-mix(in srgb, rgb(0, 255, 0), rgb(0, 192, 0) calc(var(--theme) * 100%));

	--link: color-mix(in srgb, var(--link-normal-contrast), var(--link-high-contrast) calc(var(--contrast) * 100%));
	--link-hover: color-mix(in srgb, var(--link-hover-normal-contrast), var(--link-hover-high-contrast) calc(var(--contrast) * 100%));

	--cap-min-color: color-mix(in srgb, rgb(48, 96, 255), rgb(48, 96, 255) calc(var(--theme) * 100%));



	--gallery-color: rgb(185, 241, 182);
	/* --gallery-color: lch(90% 35 140); */

	--applets-color: rgb(255, 184, 202);
	/* --applets-color: lch(90% 60 15); */

	--teaching-color: rgb(255, 222, 160);
	/* --teaching-color: lch(90% 35 80); */

	--math-color: rgb(181, 228, 255);
	/* --math-color: lch(90% 50 270); */

	--about-color: rgb(223, 202, 255);
	/* --about-color: lch(90% 100 293); */



	--page-width: 1150px;
	--text-width: 800px;

	--dark-outline-color-partial: color-mix(in srgb, rgba(0, 0, 0, 0), var(--normal-contrast) calc(var(--theme) * 100%));
	--dark-outline-color: color-mix(in srgb, var(--dark-outline-color-partial), var(--high-contrast) calc(var(--contrast) * 100%));

	--contrast-border-color: color-mix(in srgb, rgba(0, 0, 0, 0), var(--high-contrast) calc(var(--contrast) * 100%));

	--safe-area-inset-top: env(safe-area-inset-top);
	--safe-area-inset-bottom: env(safe-area-inset-bottom);
	--safe-area-inset-left: env(safe-area-inset-left);
	--safe-area-inset-right: env(safe-area-inset-right);
}

html
{
	background-color: var(--background);

	font-size: 16px;
	font-family: "Rubik", sans-serif;
	
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	min-height: 100vh;
	
	overflow-x: hidden;
	overflow-y: scroll;
}

body
{
	margin: 0;
	padding: 0;
	
	overflow-x: hidden;
	
	-webkit-text-size-adjust: 100%;
	-webkit-font-smoothing: antialiased;
}

.page
{
	overflow-x: hidden;
	width: min(100% - 32px, 100% - env(safe-area-inset-left) - env(safe-area-inset-right));
	padding-left: max(16px, env(safe-area-inset-left));
	padding-right: max(16px, env(safe-area-inset-right));
	padding-bottom: env(safe-area-inset-bottom);
	min-height: 100vh;
}

@media (min-width: 501px)
{
	.page
	{
		width: min(100% - 64px, 100% - env(safe-area-inset-left) - env(safe-area-inset-right));
		padding-left: max(32px, env(safe-area-inset-left));
		padding-right: max(32px, env(safe-area-inset-right));
	}
}



.hover-reduce-motion
{
	filter: brightness(.85);
}

.checkbox-row.disabled > .checkbox-container.hover-reduce-motion,
.text-button.dropdown.expanded.hover-reduce-motion
{
	filter: unset;
}



header
{
	margin-top: calc(80px + env(safe-area-inset-top));
	margin-bottom: 32px;

	transition: margin-top 0.3s cubic-bezier(0.3, 1, 0.4, 1);
}

#banner ~ #content-container header
{
	margin-top: 8px;
}

section
{
	margin-bottom: 96px;
}



a
{
	color: var(--link);
	text-decoration: none;
	
	cursor: pointer;
}

:root[style*="--contrast: 1"] .body-text a
{
	text-decoration: underline;
}

a.hover
{
	color: var(--link-hover);
}

a:not(:hover):focus
{
	color: var(--link-hover);
	outline: none;
}

p, h1, h2
{
	margin: 0;
	padding: 0;
	margin-top: 0;
	margin-bottom: 0;
	
	font-weight: normal;
}

q
{
	font-style: italic;
}

q:before, q:after
{
	content: "";
}

dfn
{
	font-weight: bold;
	font-style: normal;
}

code
{
	font-family: Menlo, Monaco, Consolas, monospace;
}

pre code.highlightable
{
	position: relative;
	max-width: var(--text-width);
	margin: 0 auto;
	tab-size: 4;
	-moz-tab-size: 4;
	-o-tab-size: 4;
}



img
{
	transform: translateZ(0);
	perspective: 1000;
	
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}



#logo, #logo-no-link
{
	width: 100px;
	height: 100px;
	margin: 0 auto;

	user-select: none;
	-webkit-user-select: none;
}

#logo img, #logo-no-link img
{
	position: absolute;
	width: 100px;
	height: 100px;

	outline: 3px solid color-mix(in srgb, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) calc(var(--theme) * 100%));
	background: rgb(255, 255, 255);
	border-radius: 50%;
}



.heading-text, .section-text, .body-text, .song-lyrics
{
	position: relative;
	max-width: var(--text-width);
	margin: 0 auto;
	margin-bottom: 16px;
}

.heading-text
{
	font-size: 175%;
	color: var(--high-contrast);
	text-align: center;
}

.section-text
{
	font-size: 125%;
	color: var(--high-contrast);
	text-align: center;
}

.body-text
{
	font-size: 100%;
	color: var(--normal-contrast);
	text-align: justify;
	line-height: 1.65;
	text-wrap: pretty;
}



.body-text span
{
	display: inline-block;
	text-align: justify;
}

/* Centers body text, but only if it's a single line (not long enough to justify). */
.center-if-needed
{
	text-align: center !important;
}



/* Centers whatever's inside of it, no margins needed. For use when margin: 0 auto just won't work. */
.center-content
{
	display: flex;
	justify-content: center;
	margin: 0 auto;
}
/* ... */

